remove @Autowired annotation